gcc/testsuite/gdc.test/compilable/emptygenmain.d
// REQUIRED_ARGS: -main -c

void foo() { }
